Edited the Html file to display the images.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="/images/mountain.jpeg" alt="lol">
+            <img src="images/mountain.jpeg" alt="lol">
         </div>
     </div>
     <div class="Section-3">
@@ -39,19 +39,19 @@
         <div class="Info">Some random information.</div>
         <div class="fruits">
             <div class="desc">
-                <img src="/images/apple.webp" alt="Apple picture">
+                <img src="images/apple.jpg" alt="Apple picture">
                 <div>This is an apple</div>
             </div>
             <div class=" desc">
-                <img src="/images/banana.webp" alt="Banana picture">
+                <img src="images/banana.jpg" alt="Banana picture">
                 <div>This is a banana</div>
             </div>
             <div class="desc">
-                <img src="/images/mango.webp" alt="Mango picture">
+                <img src="images/mango.jpg" alt="Mango picture">
                 <div>This is a mango</div>
             </div>
             <div class="desc">
-                <img src="/images/orange.webp" alt="Orange picture">
+                <img src="images/orange.jpg" alt="Orange picture">
                 <div>This is an orange</div>
             </div>
         </div>
